# EpicGameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile  EpicGameEngine.sln  LICENSE.txt  README.md
EGELauncher/: CMakeLists.txt  imgui.ini
EGELauncher/src/: App.cpp  LauncherLayer.cpp  LauncherLayer.h
EGELauncher/src/Project/: Project.ege  Win-GenScripts.bat
EGELauncher/src/Project/assets/Scripts/: CMakeLists.txt  Camera.cs
EpicGameEditor/: CMakeLists.txt  imgui.ini  lighting.frag  lighting.vert
EpicGameEditor/assets/scenes/: 3DExample.ege  Example.ege
EpicGameEditor/src/: EditorLayer.cpp  EditorLayer.h  EpicGameEditor.cpp  GameObjectsPanel.cpp  GameObjectsPanel.h
EpicGameEngine/: CMakeLists.txt  EpicGameEngine.vcxproj  EpicGameEngine.vcxproj.filters
EpicGameEngine-Scripting/: CMakeLists.txt
EpicGameEngine-Scripting/Source/: Camera.cs  Main.cs
EpicGameEngine-Scripting/Source/EpicGameEngine/: InternalCalls.cs  Vector3.cs
EpicGameEngine-Scripting/Source/EpicGameEngine/GameObjects/: GameObject.cs
EpicGameEngine-Scripting/Source/EpicGameEngine/Input/: Input.cs  Keycodes.cs  Mousecodes.cs
EpicGameEngine/dependencies/: CMakeLists.txt
EpicGameEngine/dependencies/dear_spdlog/: dear_sink.cpp  dear_sink.h
EpicGameEngine/dependencies/entt/include/: entt.hpp
EpicGameEngine/dependencies/mono/: mono-config.cmake
EpicGameEngine/include/: EpicGameEngine.h
EpicGameEngine/include/EpicGameEngine/: Application.h  Args.h  Core.h  Debug.h  EntryPoint.h  PlatformUtils.h  Timestep.h  UUID.h  Window.h  ege_pch.h
EpicGameEngine/include/EpicGameEngine/CoreLib/: CoreLib.h  Error.h  MemAllocators.h  RNG.h  Result.h  ThreadPool.h
EpicGameEngine/include/EpicGameEngine/Events/: Event.h  EventConversion.h  InputEvent.h  WindowEvent.h
EpicGameEngine/include/EpicGameEngine/GameObjects/: Components.h  GameObject.h  Rectangle.h  Scene.h  SceneSerializer.h
EpicGameEngine/include/EpicGameEngine/ImGui/: ImGuiLayer.h
EpicGameEngine/include/EpicGameEngine/Input/: Input.h  InputEvent.h  KeyCodes.h  MouseCodes.h
EpicGameEngine/include/EpicGameEngine/Layers/: Layer.h  LayerArray.h
EpicGameEngine/include/EpicGameEngine/Renderer/: BufferLayout.h  Camera.h  Framebuffer.h  IndexBuffer.h  Renderer.h  Renderer2D.h  Renderer3D.h  RendererAPI.h  Shader.h  ShaderProgram.h  Texture.h  UniformBuffer.h  VertexArray.h  VertexBuffer.h
EpicGameEngine/include/EpicGameEngine/Renderer/Camera/: Camera.h  CameraController.h
EpicGameEngine/include/EpicGameEngine/Renderer/Lighting/: Lighting.h
EpicGameEngine/include/EpicGameEngine/Renderer/OpenGL/: OpenGLFramebuffer.h  OpenGLIndexBuffer.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLUniformBuffer.h  OpenGLVertexArray.h  OpenGLVertexBuffer.h
EpicGameEngine/include/EpicGameEngine/Scripting/: ScriptingEngine.h  ScriptingRegister.h
EpicGameEngine/include/EpicGameEngine/Window/: LinuxWindow.h  Window.h  WindowsWindow.h
EpicGameEngine/include/Platform/Windows/: WindowsPlatformUtils.cpp
EpicGameEngine/src/: EpicGameEngine.h
EpicGameEngine/src/EpicGameEngine/: Application.cpp  Args.cpp  Core.h  Debug.cpp  UUID.cpp
EpicGameEngine/src/EpicGameEngine/CoreLib/: RNG.cpp  ThreadPool.cpp
EpicGameEngine/src/EpicGameEngine/Events/: EventConversion.cpp
EpicGameEngine/src/EpicGameEngine/GameObjects/: GameObject.cpp  Rectangle.cpp  Scene.cpp  SceneSerializer.cpp
EpicGameEngine/src/EpicGameEngine/ImGui/: ImGuiLayer.cpp
EpicGameEngine/src/EpicGameEngine/Input/: WindowsInput.cpp
EpicGameEngine/src/EpicGameEngine/Layers/: Layer.cpp  LayerArray.cpp
EpicGameEngine/src/EpicGameEngine/Renderer/: BufferLayout.cpp  Camera.cpp  Framebuffer.cpp  IndexBuffer.cpp  Renderer.cpp  Renderer2D.cpp  Renderer3D.cpp  RendererAPI.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp  UniformBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
EpicGameEngine/src/EpicGameEngine/Renderer/Camera/: Camera.cpp  CameraController.cpp
EpicGameEngine/src/EpicGameEngine/Renderer/Lighting/: Lighting.cpp  lighting.frag
EpicGameEngine/src/EpicGameEngine/Renderer/OpenGL/: OpenGLFramebuffer.cpp  OpenGLIndexBuffer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLUniformBuffer.cpp  OpenGLVertexArray.cpp  OpenGLVertexBuffer.cpp
EpicGameEngine/src/EpicGameEngine/Scripting/: ScriptingEngine.cpp  ScriptingRegister.cpp
EpicGameEngine/src/EpicGameEngine/Window/: WindowsWindow.cpp
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.h  SandboxApp.cpp
scripts/: CMakeLists.txt  Win-GenProjects.bat
